2008-06-11 Jim Garlick <garlick@llnl.gov>

	* src/hostlist.[ch], src/list.[ch], src/cbuf.[ch] :
	Update to latest versions from lsd-tools trunk.

	* test/t17.conf, test/t18.conf : Increase timeouts so tests can
	succeed on slower systems.

2008-06-10 Jim Garlick <garlick@llnl.gov>

	* src/powerman.c : Misc cleanup:
	- make server_fd not global
	- handle --telemetry and --exprange like other commands by 
	  enqueuing them at the head of the command queue.
	- drop hard coded daemon and config file locations.
	- add --ignore-errs option.

	* test/* : Lots of new tests.

	* device_pipe.c : Make pty connection use raw mode.

	* src/xregex.c : Pass REG_NOTBOL and REG_NOTEOL to regexec.
	The end of line ($) and beginning of line (^) operators cannot
	match determinstically the way powerman applies regexes to buffers 
	repeatedly as they fill.

	* etc/baytech-rpc28-nc.dev : Replace use of end of line operator 
	with full text of prompt.

	* config/x_ac_expand_install_dirs.m4 : New, borrow from munge.

	* src/Makefile.am : Drop command line CONFIG_DIR definition.

	* src/powermand.c : Construct default config_filename using
	X_SYSCONFDIR setting, and use directory based on X_LOCALSTATEDIR
	for run directory passed to daemon_init().

	* src/daemon.c : Create rootdir if it doesn't exist.

	* src/device.c : Switch cbuf overwrite mode from NO_DROP to WRAP_MANY
	and make dropping characters non-fatal.

	* src/client.c : Switch client fd to blocking mode before writing
	exit response.
	
2008-06-09 Jim Garlick <garlick@llnl.gov>

	* src/powerman.c : Option changes:
	- change -q,--query option to -q,--query-all with no_arguments
	- add -Q,--query option with required_arguments
	- change -n,--node option to -n,--soft-all with no_arguments
	- add -N,--soft option with required_arguments
	- change -t,--temp option to -t,--temp-all with no_arguments
	- add -P,--temp option with required_arguments
	- change -b,--beacon option to -b,--beacon-all with no_arguments